{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 143,
  "lineage": "53b53ae8-baf0-3766-6daf-5ed4514f6e97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094b6b1356b9dfeed",
            "association_id": "eipassoc-0637e024814970a4b",
            "domain": "vpc",
            "id": "eipalloc-094b6b1356b9dfeed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09126f2af7ee5cae0",
            "private_dns": "ip-10-32-2-34.ec2.internal",
            "private_ip": "10.32.2.34",
            "public_dns": "ec2-34-196-117-101.compute-1.amazonaws.com",
            "public_ip": "34.196.117.101",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8c715fce9ac0423",
            "association_id": "eipassoc-026b5e4ec0f9bb0ef",
            "domain": "vpc",
            "id": "eipalloc-0f8c715fce9ac0423",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d05b51c0dba4004b",
            "private_dns": "ip-10-32-3-122.ec2.internal",
            "private_ip": "10.32.3.122",
            "public_dns": "ec2-3-209-103-152.compute-1.amazonaws.com",
            "public_ip": "3.209.103.152",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0889a44b331db0194",
            "arn": "arn:aws:ec2:us-east-1:123101090252:instance/i-04c275c101c935840",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c275c101c935840",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067658220cf16ca6f",
            "private_dns": "ip-172-31-25-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.36",
            "public_dns": "ec2-34-228-38-246.compute-1.amazonaws.com",
            "public_ip": "34.228.38.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-033da56cf3e4661e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be3b7ff72d7bff98",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a59ba1cf15417e3d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:internet-gateway/igw-0edbd9f8246d86656",
            "id": "igw-0edbd9f8246d86656",
            "owner_id": "123101090252",
            "vpc_id": "vpc-092883341c873402c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123101090252:loadbalancer/app/example-lb/8c1991407289a8d3",
            "arn_suffix": "app/example-lb/8c1991407289a8d3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-lb-1775652792.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:123101090252:loadbalancer/app/example-lb/8c1991407289a8d3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06c6be146ae7eaf14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ca74498000bfbf0"
              },
              {
                "subnet_id": "subnet-0818b10110e725ecb"
              }
            ],
            "subnets": [
              "subnet-01ca74498000bfbf0",
              "subnet-0818b10110e725ecb"
            ],
            "vpc_id": "vpc-092883341c873402c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123101090252:listener/app/example-lb/8c1991407289a8d3/9531568b2bd8179a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123101090252:targetgroup/example-target-group/e9f2e9aaf7dd392d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123101090252:listener/app/example-lb/8c1991407289a8d3/9531568b2bd8179a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123101090252:loadbalancer/app/example-lb/8c1991407289a8d3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.hello_world",
            "aws_security_group.lb",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123101090252:targetgroup/example-target-group/e9f2e9aaf7dd392d",
            "arn_suffix": "targetgroup/example-target-group/e9f2e9aaf7dd392d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123101090252:targetgroup/example-target-group/e9f2e9aaf7dd392d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-092883341c873402c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094b6b1356b9dfeed",
            "association_id": "eipassoc-0637e024814970a4b",
            "connectivity_type": "public",
            "id": "nat-030098ea1514c1340",
            "network_interface_id": "eni-09126f2af7ee5cae0",
            "private_ip": "10.32.2.34",
            "public_ip": "34.196.117.101",
            "subnet_id": "subnet-01ca74498000bfbf0"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8c715fce9ac0423",
            "association_id": "eipassoc-026b5e4ec0f9bb0ef",
            "connectivity_type": "public",
            "id": "nat-003ed304129bf86c5",
            "network_interface_id": "eni-0d05b51c0dba4004b",
            "private_ip": "10.32.3.122",
            "public_ip": "3.209.103.152",
            "subnet_id": "subnet-0818b10110e725ecb"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0edbd9f8246d86656",
            "id": "r-rtb-07aad51731a8121961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07aad51731a812196",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:route-table/rtb-0bdb5261d9f81ce16",
            "id": "rtb-0bdb5261d9f81ce16",
            "owner_id": "123101090252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-030098ea1514c1340",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092883341c873402c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:route-table/rtb-06837edbc0dc9fbc9",
            "id": "rtb-06837edbc0dc9fbc9",
            "owner_id": "123101090252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003ed304129bf86c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092883341c873402c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c83443bbd7b95e5",
            "route_table_id": "rtb-0bdb5261d9f81ce16",
            "subnet_id": "subnet-04bc074633c43b75d"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d12cf4fe6a9c1bf8",
            "route_table_id": "rtb-06837edbc0dc9fbc9",
            "subnet_id": "subnet-0ffaed40d55fe0862"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello_world_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:security-group/sg-0811178d68fe6f106",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0811178d68fe6f106",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06c6be146ae7eaf14"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "example-task-security-group",
            "name_prefix": "",
            "owner_id": "123101090252",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092883341c873402c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:security-group/sg-06c6be146ae7eaf14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c6be146ae7eaf14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-alb-security-group",
            "name_prefix": "",
            "owner_id": "123101090252",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-092883341c873402c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:subnet/subnet-04bc074633c43b75d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bc074633c43b75d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123101090252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet"
            },
            "tags_all": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-092883341c873402c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:subnet/subnet-0ffaed40d55fe0862",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffaed40d55fe0862",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123101090252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet"
            },
            "tags_all": {
              "Name": "private subnet"
            },
            "vpc_id": "vpc-092883341c873402c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:subnet/subnet-01ca74498000bfbf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca74498000bfbf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123101090252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-092883341c873402c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:subnet/subnet-0818b10110e725ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818b10110e725ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123101090252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-092883341c873402c"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123101090252:vpc/vpc-092883341c873402c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-06bfa91556d7aa8ce",
            "default_route_table_id": "rtb-07aad51731a812196",
            "default_security_group_id": "sg-0ed00627d451ad10f",
            "dhcp_options_id": "dopt-049d27ade84c2e9fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092883341c873402c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07aad51731a812196",
            "owner_id": "123101090252"
          }
        }
      ]
    }
  ]
}